typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement11.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement11.ts:2:22
  |
2 | for (const [a, b] of X) {
  |                      ^

